--- a/style.css
+++ b/style.css
@@ -465,7 +465,7 @@ footer p {
   width: 452px;
   height: 367px;
   position: absolute;
-  background-image: url("/img-2.png");
+  background-image: url("/img-2.webp");
   background-position: center;
   background-size: contain;
   background-repeat: no-repeat;
@@ -476,7 +476,7 @@ footer p {
   width: 1240px;
   height: 1110px;
   position: absolute;
-  background-image: url("/img.png");
+  background-image: url("/img.webp");
   background-position: center;
   background-size: contain;
   background-repeat: no-repeat;
@@ -556,7 +556,7 @@ footer p {
 .block-image-1:after {
   content: "";
   position: absolute;
-  background-image: url("/block-image-1.png");
+  background-image: url("/block-image-1.webp");
   width: 710px;
   height: 412px;
   background-size: contain;
@@ -569,7 +569,7 @@ footer p {
 .block-image-2:after {
   content: "";
   position: absolute;
-  background-image: url("/block-image-2.png");
+  background-image: url("/block-image-2.webp");
   width: 710px;
   height: 412px;
   background-size: contain;
@@ -581,7 +581,7 @@ footer p {
 .block-image-3:after {
   content: "";
   position: absolute;
-  background-image: url("/block-image-3.png");
+  background-image: url("/block-image-3.webp");
   width: 960px;
   height: 700px;
   background-size: contain;
@@ -594,7 +594,7 @@ footer p {
 .block-image-4:after {
   content: "";
   position: absolute;
-  background-image: url("/block-image-4.png");
+  background-image: url("/block-image-4.webp");
   width: 960px;
   height: 700px;
   background-size: contain;
@@ -607,7 +607,7 @@ footer p {
 .block-image-5:after {
   content: "";
   position: absolute;
-  background-image: url("/block-image-5.1.png");
+  background-image: url("/block-image-5.1.webp");
   width: 100%;
   height: 375px;
   background-size: contain;
@@ -697,7 +697,7 @@ footer p {
 }
 
 .block-image-5.block-image-5-next:after {
-  background-image: url("/block-image-5.2.png");
+  background-image: url("/block-image-5.2.webp");
 }
 
 .small-decoration-1 {
